hero image sizing fixed
repeated too much

--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ footer ul{
     margin-top: 8vh;
     margin-bottom: 10vh;
     align-items: center;
+    background-repeat: no-repeat; 
     
     
 }
